--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Fetch Data</h1>
 
         <!-- Tombol Toggle Mode -->
-        <button id="toggleMode">Switch to Dark Mode</button>
+        <button id="toggleMode">Ganti Ke Mode Gelap</button>
 
         <div class="input-container">
             <label for="searchType">Choose Fetch Type:</label>
